--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -10,10 +10,11 @@
 
             <label for="categorie-select">Choisissez une ou des catégorie(s)</label>
 
-            <input type="checkbox" name="homme"> Homme
-            <input type="checkbox" name="femme"> Femme
-            <input type="checkbox" name="enfant"> Enfant
-            <input type="checkbox" name="promotion"> Promotions
+                <select name="categories">
+                    <option value="Homme">Homme</option>
+                    <option value="Femme">Femme</option>
+                    <option value="Enfant">Enfant</option>
+                </select>
 
 
 
