--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -29,7 +29,7 @@
             </tr>
             <tr>
                 <th>Image</th>
-                <td>{{ produit.Image }}</td>
+                <td><img src="../images/{{ produit.Image }}"></td>
             </tr>
         </tbody>
     </table>
