--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
 
 
         <!-- Logo desktop -->
-        <a href="#" class="logo">
+        <a href="/" class="logo">
           <img src="../images/icons/logo-01.png" alt="IMG-LOGO">
         </a>
 
