--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -25,10 +25,10 @@
                 <td>{{ produit.id }}</td>
               -->
                 <td>{{ produit.Libelle }}</td>
-                <td>{{ produit.Prix }}</td>
+                <td>{{ produit.Prix }}€</td>
                 <td>{{ produit.Description }}</td>
                 <td>{{ produit.QteStock }}</td>
-                <td><img src="../images/{{ produit.Image }}"></td>
+{#                <td><img src="../images/{{ produit.Image }}"></td>#}
                 <td>
 
                     <a href="{{ path('produit_show', {'id': produit.id}) }}">show</a>
