--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -12,6 +12,7 @@
                 <th>Id</th>
               -->
                 <th>Libelle</th>
+                <th>Categorie</th>
                 <th>Prix</th>
                 <th>Description</th>
                 <th>QteStock</th>
@@ -25,6 +26,7 @@
                 <td>{{ produit.id }}</td>
               -->
                 <td>{{ produit.Libelle }}</td>
+                <td>{{ produit.Categorie.Libelle }}</td>
                 <td>{{ produit.Prix }}€</td>
                 <td>{{ produit.Description }}</td>
                 <td>{{ produit.QteStock }}</td>
