--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
     </head>
     <!-- <body class="animsition"> -->
     <body>
-      <nav class="navbar fixed-top navbar-light bg-light">
+      <nav class="navbar navbar-light bg-light">
         <div class="container">
 
 
