--- a/templates/coza/css/main.css
+++ b/templates/coza/css/main.css
@@ -39,6 +39,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
+
 @font-face {
   font-family: Poppins-Regular;
   src: url('../fonts/Poppins/Poppins-Regular.ttf');
@@ -114,7 +115,10 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 .slick-slide {outline: none !important;}
 
 
-
+.tailleimg {
+  max-width: 10%;
+  height: auto;
+}
 
 
 /*//////////////////////////////////////////////////////////////////
