--- a/templates/index/femme.html.twig
+++ b/templates/index/femme.html.twig
@@ -1,6 +1,45 @@
 {% extends 'base.html.twig' %}
-{% block title %}SportLudique - Homme{% endblock %}
+{% block title %}SportLudique - Femme{% endblock %}
 
 {% block body %}
 
+    <table class="table">
+        <thead>
+        <tr>
+            <!--
+              <th>Id</th>
+            -->
+            <th>Libelle</th>
+            <th>Prix</th>
+            <th>Description</th>
+            <th>QteStock</th>
+            <th>actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for produit in produits %}
+            <tr>
+                <!--
+                <td>{{ produit.id }}</td>
+              -->
+                <td>{{ produit.Libelle }}</td>
+                <td>{{ produit.Prix }}</td>
+                <td>{{ produit.Description }}</td>
+                <td>{{ produit.QteStock }}</td>
+                {#                <td><img src="../images/{{ produit.Image }}"></td>#}
+                <td>
+
+                    <a href="{{ path('produit_show', {'id': produit.id}) }}">show</a>
+                    <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('produit_new') }}">Create new</a>
 {% endblock %}
