--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -233,7 +233,7 @@
 
     							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
     								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-    									Shop Now
+    									Voir les produits
     								</a>
     							</div>
     						</div>
@@ -354,7 +354,7 @@
 
     							<div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
     								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-    									Shop Now
+    									Voir les produits
     								</a>
     							</div>
     						</div>
@@ -489,7 +489,7 @@
 
     							<div class="layer-slick1 animated visible-false" data-appear="rotateIn" data-delay="1600">
     								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
-    									Shop Now
+    									Voir les produits
     								</a>
     							</div>
     						</div>
@@ -832,39 +832,49 @@
     					</div>
     				</div>
     			</div>
+                <div>
+                    {% for produit in produits %}
+                    <tr>
+                    <!--
 
-    			<div class="row isotope-grid">
-    				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-    					<!-- Block2 -->
-    					<div class="block2">
-    						<div class="block2-pic hov-img0">
-    							<img src="../images/maillotmessi.jpg" alt="IMG-PRODUCT">
+                        <a href="{{ path('produit_show', {'id': produit.id}) }}">show</a>
+                        <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
+                    </td>
+                    </tr>
+                    <div class="row isotope-grid">
+                        <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+                             Block2 -->
+                            <div class="block2">
+                                <div class="block2-pic hov-img0">
+                                    <img class="tailleimg" src="../images/{{ produit.Image }}" alt="IMG-PRODUCT">
 
-    							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-    								Quick View
-    							</a>
-    						</div>
+                                    <a href="/produit/{{ produit.id}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                                        Voir Détails
+                                    </a>
+                                </div>
 
-    						<div class="block2-txt flex-w flex-t p-t-14">
-    							<div class="block2-txt-child1 flex-col-l ">
-    								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-    									Maillot BARCA LIONEL MESSI
-    								</a>
+                                <div class="block2-txt flex-w flex-t p-t-14">
+                                    <div class="block2-txt-child1 flex-col-l ">
+                                        <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                                            {{ produit.Libelle }}
+                                        </a>
 
-    								<span class="stext-105 cl3">
-    									$16.64
-    								</span>
-    							</div>
+                                        <span class="stext-105 cl3">
+                                            {{ produit.Prix }}€
+                                        </span>
+                                    </div>
 
-    							<div class="block2-txt-child2 flex-r p-t-3">
-    								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-    									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-    									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-    								</a>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
+                                    <div class="block2-txt-child2 flex-r p-t-3">
+                                        <a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
+                                            <img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
+                                            <img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                     </div>
+                    {% endfor %}
+                </div>
 
     				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
     					<!-- Block2 -->
