--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
     </head>
     <!-- <body class="animsition"> -->
     <body>
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar sticky-top navbar-light bg-light">
         <div class="container">
 
 
@@ -67,9 +67,6 @@
               </ul>
             </li>
 
-            <li class="label1" data-label1="hot">
-              <a href="shoping-cart.html">Promotions</a>
-            </li>
           </ul>
         </div>
 
@@ -103,10 +100,7 @@
           <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
             <i class="zmdi zmdi-shopping-cart"></i>
           </div>
-          <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
-            <i class="zmdi zmdi-favorite-outline"></i>
-          </a>
-          </div>
+        </div>
       </nav>
 
 
