--- a/templates/index/enfant.html.twig
+++ b/templates/index/enfant.html.twig
@@ -3,43 +3,34 @@
 
 {% block body %}
 
-    <table class="table">
-        <thead>
-        <tr>
-            <!--
-              <th>Id</th>
-            -->
-            <th>Libelle</th>
-            <th>Prix</th>
-            <th>Description</th>
-            <th>QteStock</th>
-            <th>actions</th>
-        </tr>
-        </thead>
-        <tbody>
+
+    <div class="row">
         {% for produit in produits %}
-            <tr>
-                <!--
-                <td>{{ produit.id }}</td>
-              -->
-                <td>{{ produit.Libelle }}</td>
-                <td>{{ produit.Prix }}</td>
-                <td>{{ produit.Description }}</td>
-                <td>{{ produit.QteStock }}</td>
-                {#                <td><img src="../images/{{ produit.Image }}"></td>#}
-{#                <td>#}
+            <div class="col-4">
+                <div class="block2">
+                    <div class="block2-pic hov-img0">
+                        <img src="../images/{{ produit.Image }}" alt="IMG-PRODUCT" >
 
-{#                    <a href="{{ path('produit_show', {'id': produit.id}) }}">show</a>#}
-{#                    <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>#}
-{#                </td>#}
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
+                        <a href="/produit/{{ produit.id}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                            Voir Détails
+                        </a>
+                    </div>
+
+                    <div class="block2-txt flex-w flex-t p-t-14">
+                        <div class="block2-txt-child1 flex-col-l ">
+                            <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                                {{ produit.Libelle }}
+                            </a>
+
+                            <span class="stext-105 cl3">
+                                            {{ produit.Prix }}€
+                                        </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-        </tbody>
+    </div>
+    </tbody>
     </table>
-
-    <a href="{{ path('produit_new') }}">Create new</a>
 {% endblock %}
