--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -123,10 +123,6 @@
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
                       <i class="zmdi zmdi-shopping-cart"></i>
                     </div>
-
-                    <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
-                      <i class="zmdi zmdi-favorite-outline"></i>
-                    </a>
                   </div>
 
                   <!-- Button show menu -->
@@ -221,18 +217,18 @@
     						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
     							<div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
     								<span class="ltext-101 cl2 respon2">
-    									Women Collection 2018
+    									Articles pour Femme
     								</span>
     							</div>
 
     							<div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
     								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-    									NEW SEASON
+    									Nouvel Arrivage !
     								</h2>
     							</div>
 
     							<div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
-    								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+    								<a href="femme" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
     									Voir les produits
     								</a>
     							</div>
@@ -379,10 +375,6 @@
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
                       <i class="zmdi zmdi-shopping-cart"></i>
                     </div>
-
-                    <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
-                      <i class="zmdi zmdi-favorite-outline"></i>
-                    </a>
                   </div>
 
                   <!-- Button show menu -->
@@ -509,20 +501,16 @@
     					<div class="block1 wrap-pic-w">
     						<img src="images/banner-01.jpg" alt="IMG-BANNER">
 
-    						<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+    						<a href="femme" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
     							<div class="block1-txt-child1 flex-col-l">
     								<span class="block1-name ltext-102 trans-04 p-b-8">
-    									Women
-    								</span>
-
-    								<span class="block1-info stext-102 trans-04">
-    									Spring 2018
+    									Femme
     								</span>
     							</div>
 
     							<div class="block1-txt-child2 p-b-4 trans-05">
     								<div class="block1-link stext-101 cl0 trans-09">
-    									Shop Now
+    									Voir les articles
     								</div>
     							</div>
     						</a>
@@ -534,20 +522,16 @@
     					<div class="block1 wrap-pic-w">
     						<img src="images/banner-02.jpg" alt="IMG-BANNER">
 
-    						<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+    						<a href="homme" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
     							<div class="block1-txt-child1 flex-col-l">
     								<span class="block1-name ltext-102 trans-04 p-b-8">
-    									Men
+    									Homme
     								</span>
-
-    								<span class="block1-info stext-102 trans-04">
-    									Spring 2018
-    								</span>
-    							</div>
+                                </div>
 
     							<div class="block1-txt-child2 p-b-4 trans-05">
     								<div class="block1-link stext-101 cl0 trans-09">
-    									Shop Now
+    									Voir les articles
     								</div>
     							</div>
     						</a>
@@ -557,22 +541,19 @@
     				<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
     					<!-- Block1 -->
     					<div class="block1 wrap-pic-w">
-    						<img src="images/banner-03.jpg" alt="IMG-BANNER">
+    						<img src="images/enfantsap.jpg" alt="IMG-BANNER">
 
-    						<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+    						<a href="enfant" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
     							<div class="block1-txt-child1 flex-col-l">
     								<span class="block1-name ltext-102 trans-04 p-b-8">
-    									Accessories
+    									Enfant
     								</span>
 
-    								<span class="block1-info stext-102 trans-04">
-    									New Trend
-    								</span>
     							</div>
 
     							<div class="block1-txt-child2 p-b-4 trans-05">
     								<div class="block1-link stext-101 cl0 trans-09">
-    									Shop Now
+    									Voir les articles
     								</div>
     							</div>
     						</a>
@@ -587,34 +568,26 @@
     		<div class="container">
     			<div class="p-b-10">
     				<h3 class="ltext-103 cl5">
-    					Product Overview
+    					Liste des produits
     				</h3>
     			</div>
 
     			<div class="flex-w flex-sb-m p-b-52">
     				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
     					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
-    						All Products
+    						Tout les produits
     					</button>
 
     					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".women">
-    						Women
+    						Femme
     					</button>
 
     					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".men">
-    						Men
+    						Homme
     					</button>
 
     					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".bag">
-    						Bag
-    					</button>
-
-    					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".shoes">
-    						Shoes
-    					</button>
-
-    					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".watches">
-    						Watches
+    						Enfant
     					</button>
     				</div>
 
@@ -839,7 +812,7 @@
                                 <div class="block2-pic hov-img0">
                                     <img src="../images/{{ produit.Image }}" alt="IMG-PRODUCT" >
 
-                                    <a href="/produit/{{ produit.id}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                                    <a href="/produit/{{ produit.id}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04">
                                         Voir Détails
                                     </a>
                                 </div>
@@ -854,149 +827,12 @@
                                             {{ produit.Prix }}€
                                         </span>
                                     </div>
-
-                                    <div class="block2-txt-child2 flex-r p-t-3">
-                                        <a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-                                            <img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-                                            <img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-                                        </a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     {% endfor %}
                 </div>
-
-    				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-    					<!-- Block2 -->
-    					<div class="block2">
-    						<div class="block2-pic hov-img0">
-    							<img src="images/product-13.jpg" alt="IMG-PRODUCT">
-
-    							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-    								Quick View
-    							</a>
-    						</div>
-
-    						<div class="block2-txt flex-w flex-t p-t-14">
-    							<div class="block2-txt-child1 flex-col-l ">
-    								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-    									T-Shirt with Sleeve
-    								</a>
-
-    								<span class="stext-105 cl3">
-    									$18.49
-    								</span>
-    							</div>
-
-    							<div class="block2-txt-child2 flex-r p-t-3">
-    								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-    									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-    									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-    								</a>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-
-    				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-    					<!-- Block2 -->
-    					<div class="block2">
-    						<div class="block2-pic hov-img0">
-    							<img src="images/product-14.jpg" alt="IMG-PRODUCT">
-
-    							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-    								Quick View
-    							</a>
-    						</div>
-
-    						<div class="block2-txt flex-w flex-t p-t-14">
-    							<div class="block2-txt-child1 flex-col-l ">
-    								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-    									Pretty Little Thing
-    								</a>
-
-    								<span class="stext-105 cl3">
-    									$54.79
-    								</span>
-    							</div>
-
-    							<div class="block2-txt-child2 flex-r p-t-3">
-    								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-    									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-    									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-    								</a>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-
-    				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item watches">
-    					<!-- Block2 -->
-    					<div class="block2">
-    						<div class="block2-pic hov-img0">
-    							<img src="images/product-15.jpg" alt="IMG-PRODUCT">
-
-    							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-    								Quick View
-    							</a>
-    						</div>
-
-    						<div class="block2-txt flex-w flex-t p-t-14">
-    							<div class="block2-txt-child1 flex-col-l ">
-    								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-    									Mini Silver Mesh Watch
-    								</a>
-
-    								<span class="stext-105 cl3">
-    									$86.85
-    								</span>
-    							</div>
-
-    							<div class="block2-txt-child2 flex-r p-t-3">
-    								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-    									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-    									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-    								</a>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-
-    				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-    					<!-- Block2 -->
-    					<div class="block2">
-    						<div class="block2-pic hov-img0">
-    							<img src="images/product-16.jpg" alt="IMG-PRODUCT">
-
-    							<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-    								Quick View
-    							</a>
-    						</div>
-
-    						<div class="block2-txt flex-w flex-t p-t-14">
-    							<div class="block2-txt-child1 flex-col-l ">
-    								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-    									Square Neck Back
-    								</a>
-
-    								<span class="stext-105 cl3">
-    									$29.64
-    								</span>
-    							</div>
-
-    							<div class="block2-txt-child2 flex-r p-t-3">
-    								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-    									<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-    									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-    								</a>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-
-    			<!-- Load more -->
+                <!-- Load more -->
     			<div class="flex-c-m flex-w w-full p-t-45">
     				<a href="#" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
     					Load More
@@ -1018,19 +854,19 @@
     					<ul>
     						<li class="p-b-10">
     							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								Women
+    								Femme
     							</a>
     						</li>
 
     						<li class="p-b-10">
     							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								Men
+    								Homme
     							</a>
     						</li>
 
     						<li class="p-b-10">
     							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								Shoes
+    								Enfant
     							</a>
     						</li>
 
@@ -1160,7 +996,7 @@
     	</div>
 
     	<!-- Modal1 -->
-    	<div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
+    {#	<div class="wrap-modal1 js-modal1 p-t-60 p-b-20">
     		<div class="overlay-modal1 js-hide-modal1"></div>
 
     		<div class="container">
@@ -1287,12 +1123,6 @@
     							</div>
 
     							<!--  -->
-    							<div class="flex-w flex-m p-l-100 p-t-40 respon7">
-    								<div class="flex-m bor9 p-r-10 m-r-11">
-    									<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
-    										<i class="zmdi zmdi-favorite"></i>
-    									</a>
-    								</div>
 
     								<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
     									<i class="fa fa-facebook"></i>
@@ -1310,7 +1140,7 @@
     					</div>
     				</div>
     			</div>
-    		</div>
+    		</div>#}
     	</div>
 
 
