--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
 
         <!-- Logo desktop -->
         <a href="/" class="logo">
-          <img src="../images/icons/logo-01.png" alt="IMG-LOGO">
+          <img src="../images/icons/logo.png" alt="IMG-LOGO">
         </a>
 
         <!-- Menu desktop -->
@@ -94,9 +94,6 @@
                     {% endfor %}
                {% endif %}
 
-          <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-            <i class="zmdi zmdi-search"></i>
-          </div>
           <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
             <i class="zmdi zmdi-shopping-cart"></i>
           </div>
