--- a/templates/index/homme.html.twig
+++ b/templates/index/homme.html.twig
@@ -11,7 +11,7 @@
                         <div class="block2-pic hov-img0">
                             <img src="../images/{{ produit.Image }}" alt="IMG-PRODUCT" >
 
-                            <a href="/produit/{{ produit.id}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+                            <a href="/produit/{{ produit.id}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04">
                                 Voir Détails
                             </a>
                         </div>
