--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -111,7 +111,7 @@
                 <div class="wrap-header-mobile">
                   <!-- Logo moblie -->
                   <div class="logo-mobile">
-                    <a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+                    <a href="index.html"><img src="images/icons/logo.png" alt="IMG-LOGO"></a>
                   </div>
 
                   <!-- Icon header -->
@@ -243,7 +243,7 @@
                 <div class="wrap-header-mobile">
                   <!-- Logo moblie -->
                   <div class="logo-mobile">
-                    <a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+                    <a href="index.html"><img src="images/icons/logo.png" alt="IMG-LOGO"></a>
                   </div>
 
                   <!-- Button show menu -->
@@ -338,18 +338,18 @@
     						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
     							<div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
     								<span class="ltext-101 cl2 respon2">
-    									Men New-Season
+    									Articles de sport pour Hommes !
     								</span>
     							</div>
 
     							<div class="layer-slick1 animated visible-false" data-appear="lightSpeedIn" data-delay="800">
     								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-    									Jackets & Coats
+    									Nouveau Maillot!
     								</h2>
     							</div>
 
     							<div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
-    								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+    								<a href="homme" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
     									Voir les produits
     								</a>
     							</div>
@@ -363,7 +363,7 @@
                 <div class="wrap-header-mobile">
                   <!-- Logo moblie -->
                   <div class="logo-mobile">
-                    <a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+                    <a href="index.html"><img src="images/icons/logo.png" alt="IMG-LOGO"></a>
                   </div>
 
                   <!-- Icon header -->
@@ -469,18 +469,18 @@
     						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
     							<div class="layer-slick1 animated visible-false" data-appear="rotateInDownLeft" data-delay="0">
     								<span class="ltext-101 cl2 respon2">
-    									Men Collection 2018
+    									Collection Enfant
     								</span>
     							</div>
 
     							<div class="layer-slick1 animated visible-false" data-appear="rotateInUpRight" data-delay="800">
     								<h2 class="ltext-201 cl2 p-t-19 p-b-43 respon1">
-    									New arrivals
+    									Les nouveautés
     								</h2>
     							</div>
 
     							<div class="layer-slick1 animated visible-false" data-appear="rotateIn" data-delay="1600">
-    								<a href="product.html" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
+    								<a href="enfant" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04">
     									Voir les produits
     								</a>
     							</div>
