--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -23,6 +23,9 @@
                 <th>Description</th>
                 <td>{{ produit.Description }}</td>
             </tr>
+          <a href="{{ path('cart_add', {'id': produit.id}) }}" class="btn btn-success float-left">
+              Ajouter au Panier
+          </a>
             <tr>
                 <th>QteStock</th>
                 <td>{{ produit.QteStock }}</td>
@@ -33,10 +36,16 @@
             </tr>
         </tbody>
     </table>
+    {% if app.user == true %}
+        {% for role in app.user.roles %}
+            {% if role == "ROLE_ADMIN" %}
+                <a href="{{ path('produit_index') }}">back to list</a>
 
-    <a href="{{ path('produit_index') }}">back to list</a>
+                <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
 
-    <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
+                {{ include('produit/_delete_form.html.twig') }}
+            {% endif %}
+        {% endfor %}
+    {% endif %}
 
-    {{ include('produit/_delete_form.html.twig') }}
 {% endblock %}
