--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -94,8 +94,10 @@
                     {% endfor %}
                {% endif %}
 
-          <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
-            <i class="zmdi zmdi-shopping-cart"></i>
+          <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
+              <a href="/cart">
+                  <i class="zmdi zmdi-shopping-cart"></i>
+              </a>
           </div>
         </div>
       </nav>
@@ -177,12 +179,6 @@
 
         /*---------------------------------------------*/
 
-        $('.js-addcart-detail').each(function(){
-          var nameProduct = $(this).parent().parent().parent().parent().find('.js-name-detail').html();
-          $(this).on('click', function(){
-            swal(nameProduct, "is added to cart !", "success");
-          });
-        });
 
       </script>
     <!--===============================================================================================-->
