--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -120,8 +120,10 @@
                       <i class="zmdi zmdi-search"></i>
                     </div>
 
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
-                      <i class="zmdi zmdi-shopping-cart"></i>
+                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti">
+                        <a href="/cart">
+                            <i class="zmdi zmdi-shopping-cart"></i>
+                        </a>
                     </div>
                   </div>
 
@@ -372,8 +374,10 @@
                       <i class="zmdi zmdi-search"></i>
                     </div>
 
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
+                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10">
+                        <a href="/cart">
                       <i class="zmdi zmdi-shopping-cart"></i>
+                        </a>
                     </div>
                   </div>
 
@@ -853,26 +857,20 @@
 
     					<ul>
     						<li class="p-b-10">
-    							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+    							<a href="/femme" class="stext-107 cl7 hov-cl1 trans-04">
     								Femme
     							</a>
     						</li>
 
     						<li class="p-b-10">
-    							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+    							<a href="/homme" class="stext-107 cl7 hov-cl1 trans-04">
     								Homme
     							</a>
     						</li>
 
     						<li class="p-b-10">
-    							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+    							<a href="/enfant" class="stext-107 cl7 hov-cl1 trans-04">
     								Enfant
-    							</a>
-    						</li>
-
-    						<li class="p-b-10">
-    							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								Watches
     							</a>
     						</li>
     					</ul>
@@ -880,13 +878,13 @@
 
     				<div class="col-sm-6 col-lg-3 p-b-50">
     					<h4 class="stext-301 cl0 p-b-30">
-    						Help
+    						Aide
     					</h4>
 
     					<ul>
     						<li class="p-b-10">
     							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								Track Order
+    								Vos commandes
     							</a>
     						</li>
 
@@ -898,13 +896,13 @@
 
     						<li class="p-b-10">
     							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								Shipping
+    								Acheter
     							</a>
     						</li>
 
     						<li class="p-b-10">
     							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-    								FAQs
+    								FAQ
     							</a>
     						</li>
     					</ul>
@@ -912,11 +910,11 @@
 
     				<div class="col-sm-6 col-lg-3 p-b-50">
     					<h4 class="stext-301 cl0 p-b-30">
-    						GET IN TOUCH
+    						Nous contacter
     					</h4>
 
     					<p class="stext-107 cl7 size-201">
-    						Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us on (+1) 96 716 6879
+    						Si vous avez des questions, contactez nous sur support@sportludique.com
     					</p>
 
     					<div class="p-t-27">
@@ -926,10 +924,6 @@
 
     						<a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
     							<i class="fa fa-instagram"></i>
-    						</a>
-
-    						<a href="#" class="fs-18 cl7 hov-cl1 trans-04 m-r-16">
-    							<i class="fa fa-pinterest-p"></i>
     						</a>
     					</div>
     				</div>
